--- a/example/client/settings.ui
+++ b/example/client/settings.ui
@@ -53,6 +53,16 @@
        </property>
       </widget>
      </item>
+     <item row="3" column="0">
+      <widget class="QLabel" name="label_3">
+       <property name="text">
+        <string>API Key:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="1">
+      <widget class="QLineEdit" name="apiKey"/>
+     </item>
     </layout>
    </item>
    <item row="1" column="0">
